Bug 265499 - [PATCH] akregatorpart 4.4.10 fails to build (final)
Summary: [PATCH] akregatorpart 4.4.10 fails to build (final)
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: akregator konqueror plugin (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-05 11:28 UTC by esigra
Modified: 2012-10-11 11:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
patch that fixes the build (1.74 KB, patch)
2011-02-05 11:28 UTC, esigra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description esigra 2011-02-05 11:28:49 UTC
Created attachment 56883 [details]
patch that fixes the build

Version:           unspecified (using KDE 4.5.5) 
OS:                Linux

akregatorpart 4.4.10 fails to build (final). The bug already existed in version 4.4.9. Previously reported at [http://lists.kde.org/?l=kde-pim&m=129396903512796&w=2].

Reproducible: Didn't try

Steps to Reproduce:
1. tar jxvf kdepim-4.4.10.tar.bz2
2. cd kdepim-4.4.10
3. mkdir build
4. cd build
5. cmake -DKDE4_ENABLE_FINAL=ON ..
6. make akregatorpart
Comment 1 Laurent Montel 2012-10-11 11:13:49 UTC
Git commit 6ea091255b1d1595be8a607d35083bdae9e88b25 by Montel Laurent.
Committed on 11/10/2012 at 13:13.
Pushed by mlaurent into branch 'master'.

Fix Bug 265499 - akregatorpart 4.4.10 fails to build final

FIXED-IN: 4.10

M  +1    -1    akregator/src/editsubscriptioncommand.cpp
M  +74   -74   akregator/src/feed.cpp
M  +6    -6    akregator/src/folder.cpp

http://commits.kde.org/kdepim/6ea091255b1d1595be8a607d35083bdae9e88b25