Fix Bug 265499 - akregatorpart 4.4.10 fails to build final

FIXED-IN: 4.10
BUG: 265499